[gd_scene load_steps=25 format=2]

[ext_resource path="res://ui/MainTheme.tres" type="Theme" id=1]
[ext_resource path="res://shop/Shop.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/homespun.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://shop/ItemsDisplay.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/images/heart/heart_full.png" type="Texture" id=5]
[ext_resource path="res://ui/MoneyCounter.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="Theme" id=10]
PanelContainer/styles/panel = SubResource( 9 )

[sub_resource type="BitmapFont" id=11]
height = 10.0

[sub_resource type="Theme" id=12]
Label/fonts/font = SubResource( 11 )

[sub_resource type="DynamicFont" id=17]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=18]
default_font = SubResource( 17 )

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.32549, 0.329412, 0.411765, 1 )
border_width_top = 3
border_width_bottom = 4
border_color = Color( 0.32549, 0.329412, 0.411765, 1 )
shadow_size = 3

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.262745, 0.270588, 0.384314, 1 )
border_width_top = 3
border_width_bottom = 4
border_color = Color( 0.262745, 0.270588, 0.384314, 1 )
shadow_size = 5

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.262745, 0.266667, 0.345098, 1 )
border_width_top = 3
border_width_bottom = 4
border_color = Color( 0.262745, 0.266667, 0.345098, 1 )
shadow_size = 3

[sub_resource type="Theme" id=20]
Button/styles/hover = SubResource( 21 )
Button/styles/normal = SubResource( 19 )
Button/styles/pressed = SubResource( 22 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.184314, 0.192157, 0.270588, 1 )

[sub_resource type="Theme" id=8]
Panel/styles/panel = SubResource( 7 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.184314, 0.188235, 0.282353, 1 )
border_width_left = 3
border_width_top = 2
border_width_right = 3
border_width_bottom = 2
border_color = Color( 0.227451, 0.231373, 0.282353, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.282353, 0.286275, 0.388235, 1 )
border_width_left = 3
border_width_top = 2
border_width_right = 3
border_width_bottom = 2
border_color = Color( 0.117647, 0.121569, 0.160784, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.184314, 0.188235, 0.282353, 1 )
border_width_left = 3
border_width_top = 2
border_width_right = 3
border_width_bottom = 2
border_color = Color( 0.117647, 0.121569, 0.160784, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.105882, 0.109804, 0.184314, 1 )
border_width_left = 3
border_width_top = 2
border_width_right = 3
border_width_bottom = 2
border_color = Color( 0.117647, 0.121569, 0.160784, 1 )
border_blend = true

[sub_resource type="DynamicFont" id=1]
size = 8
extra_spacing_char = 1
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )
Button/styles/focus = SubResource( 4 )
Button/styles/hover = SubResource( 5 )
Button/styles/normal = SubResource( 3 )
Button/styles/pressed = SubResource( 6 )

[node name="Shop" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
script = ExtResource( 2 )

[node name="ShopHContainer" type="HBoxContainer" parent="."]
margin_right = 310.0
margin_bottom = 170.0
size_flags_horizontal = 3
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ShopHContainer"]
margin_right = 153.0
margin_bottom = 170.0
size_flags_horizontal = 3
theme = ExtResource( 1 )

[node name="Empty" type="PanelContainer" parent="ShopHContainer/VBoxContainer"]
margin_right = 153.0
margin_bottom = 10.0
theme = SubResource( 10 )

[node name="Label" type="Label" parent="ShopHContainer/VBoxContainer/Empty"]
margin_right = 153.0
margin_bottom = 10.0
theme = SubResource( 12 )
clip_text = true

[node name="ItemViewer" type="PanelContainer" parent="ShopHContainer/VBoxContainer"]
margin_top = 14.0
margin_right = 153.0
margin_bottom = 170.0
size_flags_vertical = 3
theme = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="ShopHContainer/VBoxContainer/ItemViewer"]
margin_right = 153.0
margin_bottom = 156.0

[node name="NameLabel" type="Label" parent="ShopHContainer/VBoxContainer/ItemViewer/VBoxContainer"]
margin_top = 11.0
margin_right = 153.0
margin_bottom = 28.0
size_flags_vertical = 6
text = "Bird Name"
align = 1
valign = 1
autowrap = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="ShopHContainer/VBoxContainer/ItemViewer/VBoxContainer"]
position = Vector2( 75, 75 )
rotation = 0.479966
scale = Vector2( 3, 3 )
flip_h = true

[node name="CenterContainer" type="CenterContainer" parent="ShopHContainer/VBoxContainer/ItemViewer/VBoxContainer"]
margin_top = 44.0
margin_right = 153.0
margin_bottom = 119.0

[node name="ItemViewTexture" type="TextureRect" parent="ShopHContainer/VBoxContainer/ItemViewer/VBoxContainer/CenterContainer"]
margin_left = 39.0
margin_right = 114.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )
size_flags_horizontal = 0
texture = ExtResource( 5 )
expand = true

[node name="DescriptionLabel" type="Label" parent="ShopHContainer/VBoxContainer/ItemViewer/VBoxContainer"]
margin_top = 123.0
margin_right = 153.0
margin_bottom = 136.0
theme = SubResource( 18 )
text = "description"
align = 1
valign = 1

[node name="Button" type="Button" parent="ShopHContainer/VBoxContainer/ItemViewer/VBoxContainer"]
margin_top = 140.0
margin_right = 153.0
margin_bottom = 156.0
theme = SubResource( 20 )
text = "buy"

[node name="TabContainer" type="TabContainer" parent="ShopHContainer"]
margin_left = 157.0
margin_right = 310.0
margin_bottom = 170.0
size_flags_horizontal = 3
theme = ExtResource( 1 )

[node name="powerups" type="Panel" parent="ShopHContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 19.0
margin_right = -4.0
margin_bottom = -4.0
focus_neighbour_left = NodePath("../../../HBoxContainer/BackButton")
focus_neighbour_right = NodePath("../birds")
theme = SubResource( 8 )

[node name="ScrollContainer" type="ScrollContainer" parent="ShopHContainer/TabContainer/powerups"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0

[node name="VBoxContainer" type="CenterContainer" parent="ShopHContainer/TabContainer/powerups/ScrollContainer"]
margin_right = 144.0
margin_bottom = 147.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PowerupsDisplay" parent="ShopHContainer/TabContainer/powerups/ScrollContainer/VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_top = 9.0
margin_right = 136.0
margin_bottom = 137.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="birds" type="Panel" parent="ShopHContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 19.0
margin_right = -4.0
margin_bottom = -4.0
focus_neighbour_left = NodePath("../powerups")
focus_neighbour_right = NodePath("../../../HBoxContainer/BackButton")
theme = SubResource( 8 )

[node name="ScrollContainer" type="ScrollContainer" parent="ShopHContainer/TabContainer/birds"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0

[node name="VBoxContainer" type="CenterContainer" parent="ShopHContainer/TabContainer/birds/ScrollContainer"]
margin_right = 144.0
margin_bottom = 147.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BirdDisplay" parent="ShopHContainer/TabContainer/birds/ScrollContainer/VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_top = 9.0
margin_right = 136.0
margin_bottom = 137.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 52.0
margin_bottom = 13.0
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="BackButton" type="Button" parent="HBoxContainer"]
margin_right = 25.0
margin_bottom = 13.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = SubResource( 2 )
text = "back"

[node name="MoneyCounter" parent="HBoxContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 29.0
margin_right = 52.0
margin_bottom = 13.0

[connection signal="pressed" from="ShopHContainer/VBoxContainer/ItemViewer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="tab_changed" from="ShopHContainer/TabContainer" to="." method="_on_TabContainer_tab_changed"]
[connection signal="pressed" from="HBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="gui_input" from="HBoxContainer/MoneyCounter" to="." method="_on_MoneyCounter_gui_input"]
